# knee-tie

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/knee-tie-crypto/examples/: demo.rs
crates/knee-tie-crypto/src/: lib.rs
crates/knee-tie-crypto/src/dgmt/: mod.rs  params.rs  verify.rs
crates/knee-tie-crypto/src/elligator/: kummer.rs  mod.rs
crates/knee-tie-crypto/src/epoch/: grant.rs  mod.rs  seal.rs
crates/knee-tie-crypto/src/identity/: mod.rs  pseudonym.rs
crates/knee-tie-crypto/src/utils/: hash.rs  mod.rs  sprp.rs
docs/: SPECIFICATION.md
src/: error.rs  lib.rs  merkle.rs  wots.rs
src/dgmt/: join.rs  keygen.rs  open.rs  revoke.rs  sign.rs
src/elligator/: dh.rs  elligator_k1.rs  field.rs
src/epoch/: key.rs
src/identity/: store.rs
src/utils/: aead.rs  mod.rs
tests/: integration.rs
